# autotools-cpp-template

./: .gitignore  .travis.yml  Makefile.am  README.md  autogen.sh  config.hpp.in  configure.ac  my_config_file.in  tagger.sh
.github/: CODEOWNERS
other_tool/: Makefile.am
other_tool/src/: main.cpp
src/: main.cpp
